--- a/coursesapp/templates/navbar.html
+++ b/coursesapp/templates/navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-    <nav class="navbar navbar-expand-md navbar-fixed-top navbar-light main-nav" style="background-color: #ffff;">
+    <nav class="navbar navbar-expand-md navbar-fixed-top navbar-light main-nav sticky-top" style="background-color: #ffff;">
       <a href="/" class="navbar-brand"><i class="fa-solid fa-lines-leaning"></i></a> <!-- Icono de libro -->
       <button type="button" class="navbar-toggler bg-light" data-toggle="collapse" data-target="#nav" name="button"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse justify-content-center" id="nav">
