--- a/coursesapp/templates/courseView.html
+++ b/coursesapp/templates/courseView.html
@@ -59,7 +59,7 @@ Configuración
         <div class="ratio ratio-1x1 rounded-circle overflow-hidden border border-dark">
         <img src="https://icons.veryicon.com/png/o/internet--web/prejudice/user-128.png" alt="user" width="100" class="comment">
         </div>
-        <div class="align-self-center">
+        <div class="align-self-center ml-3">
             <h4>{{ comments.user }}</h4>
         </div>
         <div class="py-3 px-5">
