--- a/coursesapp/templates/profile.html
+++ b/coursesapp/templates/profile.html
@@ -129,7 +129,7 @@ Perfil
               </div>
             </div>
                   <!--Curso 2-->
-            <div class="col-md-4 ">
+            <div class="col-md-4">
               <div class="card          mb-4 box-shadow">
                 <img src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1031&q=80" alt="" class="card-img-top" style="height: 130px; width:100%; display:block;">
                 <div class="card-body h">
@@ -169,10 +169,10 @@ Perfil
                   {% for course in courses %}
                   
                   <div class="col-md-4">
-                     <div class="card mb-4 box-shadow">
+                     <div class="card mb-4 box-shadow h-100">
                        <img src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1031&q=80" alt="" class="card-img-top" style="height: 130px; width:100%; display:block;">
                        <div class="card-body">
-                         <h6 class=""><a href="https://udemy.com{{ course.url }}">{{ course.title }}</a></h6>
+                         <h6 class=""><a href="{% url 'courseView' course.id %}">{{ course.title }}</a></h6>
                          <span>{{course.instructor}}</span> <br>
                          <span>{{ course.platform }}</span> <br>
                          <span>⭐</span><span>{{course.rating}}</span>
