--- a/coursesapp/templates/profile.html
+++ b/coursesapp/templates/profile.html
@@ -112,51 +112,13 @@ Perfil
             <div class="col-lg-12">
             <div class="card mb-4 ">
               <div class="card-header ">
-              <h5 class="card-title ">Mis cursos favoritos</h5>
-              </div>
-                <div class="card-body d-flex justify-content-between">
-          <!--Despliegue de cursos-->
-                  <!--Curso 1-->
-          <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
-              <img src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1031&q=80" alt="" class="card-img-top" style="height: 130px; width:100%; display:block;">
-              <div class="card-body">
-                <h6 class=""><a href="#">Aprende JavaScript, HTML5 y CSS3</a></h6>
-                <span>Instructor</span> <br>
-                <span>Plataforma</span> <br>
-                <span>⭐</span><span>5</span>
-                </div>
+                <a href="{% url 'favorite_list' %}">
+                <button type="button" class="btn btn-danger px-2 py-1"> <i class="fa-sharp fa-solid fa-bookmark fa-lg"> </i> VER MIS CURSOS FAVORITOS </button>
+                </a>
               </div>
             </div>
-                  <!--Curso 2-->
-            <div class="col-md-4">
-              <div class="card          mb-4 box-shadow">
-                <img src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1031&q=80" alt="" class="card-img-top" style="height: 130px; width:100%; display:block;">
-                <div class="card-body h">
-                  <h6 class=""><a href="#">Aprende JavaScript, HTML5 y CSS3</a></h6>
-                  <span>Instructor</span> <br>
-                  <span>Plataforma</span> <br>
-                  <span>⭐</span><span>5</span>
-                  </div>
-                </div>
-              </div>
-                <!--curso 3-->
-              <div class="col-md-4 h-100">
-                <div class="card mb-4 box-shadow">
-                  <img src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1031&q=80" alt="" class="card-img-top" style="height: 130px; width:100%; display:block;">
-                  <div class="card-body">
-                    <h6 class=""><a href="#">Aprende JavaScript, HTML5 y CSS3</a></h6>
-                    <span>Instructor</span> <br>
-                    <span>Plataforma</span> <br>
-                    <span>⭐</span><span>5</span>
-                    </div>
-                  </div>
-                </div>
             </div>
-            <!--card body-->
           </div>
-          </div>
-         </div>
          <!--CURSOS SUGERIDOS-->
          <div class="row">
           <div class="col-lg-12">
