--- a/coursesapp/templates/navbar.html
+++ b/coursesapp/templates/navbar.html
@@ -17,11 +17,11 @@
           </li>
           <li class="nav-item ml-5">
             <!-- Barra de busqueda -->
-          <form class="form-inline ml-3 border rounded main-form-search" method="POST" action="{% url 'search' %}" id="search-bar-form">
+          <form class="form-inline ml-3 border rounded main-form-search" method="POST" action="{% url 'search' %}" id="search-bar-form-nav">
             <script>
               if(location.pathname=="/searchjob/" || location.pathname=="/jobs/") 
               {
-              document.getElementById('search-bar-form').action = "{% url 'searchjob' %}"
+              document.getElementById('search-bar-form-nav').action = "{% url 'searchjob' %}"
               }
             </script>
             {% csrf_token %}
